# Avernia-U

./: .gitignore  Dockerfile  Makefile  main.py  prueba.py  pyproject.toml  readme.md
app/: main.py
app/api/: rest.py
app/api/v1/endpoints/: postulacion.py
app/modelos/: schemas.py
app/servicios/: calculo.py
data/: avernia_ues.csv
tests/: test_schemas.py
